Fix UI alignment & responsiveness issues

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -87,3 +87,15 @@ main .container-fluid {
 .show-url {
   text-decoration: underline;
 }
+
+.episode-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+@media (max-width: 900px) {
+  .navbar-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
